--- a/doecamp/app/globals.css
+++ b/doecamp/app/globals.css
@@ -26,3 +26,24 @@ body {
     text-wrap: balance;
   }
 }
+
+
+/* styles.css */
+.campaign-indicator::before {
+  content: "";
+  display: block;
+  width: 7px; 
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 5px 0 0 5px;
+}
+
+.meta-atendida::before {
+  background-color: #28a745;
+}
+
+.meta-nao-atendida::before {
+  background-color: #dc3545; 
+}
